yoshimi 1.4.1 M

2016-10-26 Will
* Started separating out CLI replies from main direct entries.
* Completed separation up to voice level.
* All done!

2016-10-24 Will
* Implemented mising direat modulator 440Hz switch.
* Completed direct -> gui addsynthvoice.
* Updated docs.

2016-10-23 Will
* Bugfix: direct -> gui 440Hz wasn't correct for sub/pad.
* direct -> gui addsynthvoice done apart from modulators.

2016-10-22 Will
* Added Loop mode to Solo feature.
* direct -> gui padsynth completed.
* Updated docs.

2016-10-21 Will
* direct -> gui part kit mode & drum mode done.
* direct -> gui addsynth main completed.
* direct -> gui subsynth completed.
* Updated docs.

2016-10-16 Will
* Completed direct gui system/insert effects.
* More done on direct gui part.
* Gui tooltip correction.

2016-10-15 Will
* Changed GUI channel switcher name to 'Solo'.
* Corrected GUI anomalies with channel switcher.
* New Solo.txt in doc.

2016-10-14 Will
* Moved vectors entry to its own button.
* Rearanged icons.
* Added channel switcher to 'Patch Sets' files.
* Moved Channel switcher GUI control from config to Mixer Panel.
* Added channel switcher controls to direct access.
* Updated docs.

2016-10-13 Will
* Direct gui part base controls mostly done.
* Doc updates.

2016-10-12 Will
* Completed direct gui main controls.
* Starting to populate direct gui part level controls.
* Updated docs.
* Direct gui Add, Sub, Pad vol/vsense/pan controls done.

2016-10-11 Will
* Proved direct gui updates correct for main & part controls :)

2016-10-10 Will
* Ringbuffer size corrections.
* Docs punctuation corrections.
* Started to implement direct access -> gui updates.

2016-10-9 Will
* Gave direct access CLI & GUI independent 'from' ring buffers.
* Improved direct access data transfers.
* Small correction to Vector GUI.
* Improved simple message system.

2016-10-8 Will
* Direct vector access almost complete.
* Updated docs.


2016-10-7 Will
* Small corrections to GUI.