@@ -1,5 +1,11 @@
 yoshimi 1.4.1 M
 
+2016-10-27 Will
+* Direct access Bugfixes:
+  Oscillator waveshape parameter read returned wrong result.
+  Addsynth voice would crash if addsynth GUI not seen.
+  Subsynth hamonics GUI slider move reversed.
+
 2016-10-26 Will
 * Started separating out CLI replies from main direct entries.
 * Completed separation up to voice level.
